Spacing fixes

--- a/scss/_patterns_links.scss
+++ b/scss/_patterns_links.scss
@@ -39,7 +39,6 @@
   .p-top {
     align-items: center;
     display: flex;
-    margin-top: -$spv-outer--scaleable;
 
     &::before {
       border-bottom: 1px solid $colors--light-theme--border-default;
@@ -59,7 +58,7 @@
 
   .p-top__link {
     color: $color-dark;
-    padding: 0 $sph-inner--small;
+    padding: 0 $sph-inner--small 0 $sph-inner;
     text-decoration: none;
   }
 }
